@@ -1,5 +1,12 @@
 2001-02-26  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&transform_cond): Merge into...
+	(&transform): this.
+	Adjust all uses.
+
+	
+2001-02-26  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&handle_dist): Use &transform instead of dedicated
 	magic for DISTDIRS.
 	But be sure to always do it.
